kubernetes/static/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name kustomize-mutating-webhook
  namespace: flux-system
  labels:
    app: *name
spec:
  replicas: 3
  selector:
    matchLabels: &labels
      app: *name
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      nodeSelector:
        kubernetes.io/arch: "amd64"
      serviceAccountName: kustomize-mutating-webhook
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: webhook
        image: ghcr.io/xunholy/kustomize-mutating-webhook:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: webhook-certs
          mountPath: /etc/webhook/certs
          readOnly: true
        - name: cluster-config
          mountPath: /etc/config
          readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: kustomize-mutating-webhook-tls
      - name: cluster-config
        configMap:
          name: cluster-config
