kubernetes/static/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kustomize-mutating-webhook
  namespace: flux-system
spec:
  ports:
  - port: 8443
    targetPort: 8443
  selector:
    app: kustomize-mutating-webhook
